--- a/Project 7/project 7.css
+++ b/Project 7/project 7.css
@@ -1,82 +1,102 @@
-*{
-    padding: 0px;
+* {
     margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
-html,body{
-    font-weight: 300;
-    scroll-behavior: smooth;
-    line-height: 1.4;
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
 }
 
-a {
-    text-decoration: none;
-}
-body{
+.center-nav {
     display: flex;
-}
-header {
-    border: 1px solid #ccc;
-    height: 100vh;
-}
-nav h1{
-    border: 1px solid #ccc;;
-    padding: 10px;
-    font-size: 25px;
-}
-nav ul li {
-    border: 1px solid #ccc;
-    padding: 10px;
-    color: black;
-    font-size: 18px;
-}
-
-nav ul li:hover{
-    background-color: #ccc;
-    transition: 0.1s ease-in-out;
-}
-main{
-    padding: 50px;
-    max-height: 1200px;
-}
-section {
-    margin-bottom: 50px;
-}
-section article{
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
     gap: 20px;
 }
-section h2{
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
-    font-size: 25px;
-    padding-bottom: 10px;
+
+.search {
+    display: flex;
 }
-section article ul{
-    margin-left: 30px;
-    
+
+.search input {
+    min-width: 600px;
+    padding: 10px 20px;
+    border: 0.5 solid #ccc;
 }
-section article ul li{
-    margin-bottom: 10px; 
+
+.search button {
+    padding: 10px 20px;
+    border: 0.5 solid #ccc;
 }
-code{
-    white-space: pre-line;
-    line-height: 2;
-    background: #f7f7f7;
+
+.mic {
     padding: 15px;
-    margin: 10px;
-    border-radius: 20px;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    background-color: #ccc;
 }
-@media (max-width: 480px){
-    body {
-        flex-direction: column;
-    }
-    header{
-        height: 200px;
-        overflow: hidden;
-        overflow-y: scroll;
-    }
+
+.side-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 50px;
+    gap: 20px;
+
+}
+
+.tags {
+    display: flex;
+    padding: 10px 20px;
+    gap: 20px;
+}
+
+.tag {
+    padding: 5px 15px;
+    border-radius: 20px;
+    border: 1px solid rgb(22, 22, 22);
+}
+
+.dark {
+    background-color: #000;
+    color: white;
+}
+
+.light {
+    background-color: rgb(238,238,238);
+    color: rgb(67, 67, 67);
+}
+.container{
+    display: flex;
+}
+aside{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.icons img{
+    width: 30px;
+}
+.icons p{
+    font-size: 10px;
+    margin-top: -5px;
+}
+.bars{
+    margin-top: 20px;
+}
+.main-container{
+    width: 100%;
 }
 
