--- a/Project 9/project 9.css
+++ b/Project 9/project 9.css
@@ -1,14 +1,13 @@
-:root {
-    --lighting-color: #0089b7;
-    --dark-color: #003d62;
-    --darker-color: #003251;
-    --secondary-color: #fff700;
-}
-
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+}
+
+html body {
+    line-height: 1.4;
+    scroll-behavior: smooth;
+    font-weight: 300;
 }
 
 html {
@@ -19,291 +18,180 @@ body {
     font-size: 1.4rem;
 }
 
-body,
-html {
-    font-weight: 300;
-    scroll-behavior: smooth;
-    line-height: 1.4;
-    color: white;
-}
-
-header {
-    background: var(--lighting-color);
-}
-
-.container {
-    max-width: 1300px;
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
     margin: 0 auto;
-
-}
-
-a {
-    text-decoration: none;
-    color: white;
+    max-width: 1200px;
+    font-size: 2.5rem;
 }
 
 ul {
     list-style: none;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+header {
+    position: sticky;
+    top: 0;
+    background: #fff;
 }
 
 nav ul {
     display: flex;
-    gap: 5rem;
-
+    gap: 7rem;
 }
 
-nav li {
-    font-size: 1.9rem;
-    border-bottom: 0.3rem transparent solid;
-    transition: 0.3s ease-in-out;
+nav ul li:hover {
+    border-bottom: black 2px solid;
+    cursor: pointer;
 }
 
-.logo {
-    font-weight: 700;
-    font-size: 2rem;
-}
+main {
+    max-width: 1200px;
+    margin: 0 auto;
 
-nav li:hover {
-    border-bottom: 0.3rem white solid;
 }
 
 #hero {
-    background: var(--dark-color);
-    padding: 4rem 0;
-    border-bottom: 6px solid var(--lighting-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero_content,
+h1 {
+    font-size: 6rem;
+    line-height: 1.2;
+}
+
+.hero_content,
+p {
+    font-size: 2.5rem;
 }
 
 .hero_image img {
-
-    width: 589x;
-    height: 373px;
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    border-top-left-radius: 82px;
-    border-top-right-radius: 82px;
-
+    border-radius: 5rem;
 }
 
-#hero .container {
+.h-card {
     display: flex;
+    margin-top: 10rem;
+    box-shadow: 0px 5px 4px rgba(221, 221, 221, 0.35);
     align-items: center;
-    justify-content: space-around;
-}
-
-.hero_content {
-    display: grid;
-    place-items: center;
-}
-
-#hero,
-h1 {
-    font-size: 3rem;
-    font-weight: bold;
-
-}
-
-.hi_text {
-    font-size: 6rem;
-    color: var(--secondary-color);
-}
-
-.name_text {
-    font-size: 5rem;
-}
-
-#hero h2 {
-    font-size: 4rem;
-    font-weight: bold;
-
+    border: 1px solid #e2e2e2;
+    border-radius: 0.5rem;
     overflow: hidden;
-    border-right: 0.15em solid white;
-    white-space: nowrap;
-    margin: 0 auto;
-    animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
-@keyframes typing {
-    from {
-        width: 0;
-    }
+.crad-content {
+    padding: 2.5rem;
 
-    to {
-        width: 100%;
-    }
 }
 
-@keyframes blink-caret {
-
-    from,
-    to {
-        border-color: transparent;
-    }
-
-    50% {
-        border-color: white;
-    }
+.crad-content h2 {
+    font-size: 3rem;
+    padding-bottom: 2.5rem;
 }
 
-/* projects  */
+.crad-content p {
+    font-size: 2rem;
+    padding-right: 5rem;
 
-#projects {
-    background: var(--darker-color);
 }
 
-#projects h2 {
-    font-size: 6rem;
-    text-align: center;
-    padding: 2rem 0;
+.satuts {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2.5rem;
+}
+button:hover{
+    cursor: pointer;
+}
+.btn{
+    all:unset;
+    font-size: 18px;
+    font-weight: 600;
+
 }
 
-.project_container {
+.date {
+    font-size: 2rem;
+}
+
+.read {
+    font-weight: 600;
+    font-size: 1.9rem;
+    padding-right: 5rem;
+}
+
+.read:hover {
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+}
+
+.v-card {
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 320px;
+    margin-top: 10rem;
+    box-shadow: 0px 5px 4px rgba(221, 221, 221, 0.35);
+    align-items: center;
+    border: 1px solid #e2e2e2;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.card_conatainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 2rem;
-    margin-top: 5rem;
-
 }
 
-.grid_items {
-    display: grid;
-    place-items: center;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    width: 320px;
-    border-radius: 0.7rem;
-    overflow: hidden;
-    transition: 0.3s ease-in-out;
-}
-
-.card:hover {
-    transform: scale(1.05);
-    transition: 1s ease-in-out;
-}
-
-.card:hover img {
-    transform: scale(1.05);
-    transition: 0.3s ease-in-out;
-    opacity: 0.8;
-}
-
-.card:hover .card_content {
-    background: white;
-    color: var(--dark-color);
-    transform: translateY(0px);
-}
-
-.card_content {
-    padding: 2rem;
-    position: relative;
-    top: -6.5rem;
-    margin-bottom: -6.5rem;
-    transition: 0.5s ease-in-out;
-    transform: translateY(100px);
-}
-
-.card_content h3 {
-    text-align: center;
-    font-size: 25px;
-}
-
-#contact {
-    background: var(--dark-color);
-
-}
-
-#contact h2 {
-    font-size: 6rem;
-    text-align: center;
-    margin: 2rem 0;
-}
-
-#contact .container {
-    height: 90vh;
+.card_warrper {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    gap: 4rem;
 }
 
-.top_contact {
-    max-width: 800px;
-    display: grid;
-    margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+.v-card img {
+    width: 100%;
+    height: 100%;
 }
-
-.contact_way {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-}
-
-.contact_way i {
-    font-size: 3rem;
-}
-
-.contact_way h3 {
-    font-size: 3rem;
-    font-weight: bold;
-}
-
-.bottom_contact {
-    max-width: 400px;
-    display: grid;
-    margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    gap: 3rem;
-}
-
-/* footer */
-
-footer {
-    background: var(--darker-color);
-    padding: 2rem;
-    color: white;
-    font-size: 1.6rem;
+footer{
+    margin: 3rem 5rem;
+    margin-left: 17rem;
     text-align: center;
 }
-
-/* Media Query */
-
-@media (max-width: 786px) {
-    html{
-        font-size: 40%;
-    }
-    #hero .container{
-        flex-direction: column;
-    }
-    .hero_image{
-        display: grid;
-        place-items: center;
-    }
-    #contact .container{
-        height: 70vh;
-    }
+footer p{
+    font-size: 18px;
 }
-@media (max-width: 500px){
-    html {
-        font-size: 32%;
-    }
-    #hero .container{
-        flex-direction: column;
-    }
-    .hero_image{
-        display: grid;
-        place-items: center;
-    }
-    #contact .container{
-        height: 50vh;
-    }
+
+/* post  */
+
+.banner_image img{
+    width: 100%;
+}
+
+.author h3{
+    font-size: 25px;
+}
+.author p{
+    font-size: 18px;
+}
+.author{
+    margin-bottom: 25px;
+}
+article p{
+    margin: 25px 18px;
+
+}
+h2{
+    font-size: 30px;
+    margin: 20px;
+}
+article p{
+    font-size: 20px;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
